--- a/src/assets/styles/cmps/SideBar.scss
+++ b/src/assets/styles/cmps/SideBar.scss
@@ -6,7 +6,6 @@
   width: $sidebar-width;
   border-radius: 0.5em;
   background-color: $gray6;
-  margin-inline: 0.2em;
   padding-top: 1.5em;
   padding-inline: 0.9em;
 
